--- a/app/views/static_page/index.html.haml
+++ b/app/views/static_page/index.html.haml
@@ -10,3 +10,6 @@
   - else
     %li
       =link_to 'Logout', destroy_user_session_path, :method => :delete
+    %li
+      =link_to 'Send invitation', new_user_invitation_path
+
