removed all those pesky put messages

--- a/app/views/user_mailer/send_reminder.html.erb
+++ b/app/views/user_mailer/send_reminder.html.erb
@@ -4,10 +4,9 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>Sup yo</h1>
+    <h1>Sup yo, HERE IS YOUR REMINDER</h1>
     <p>
       <%= @email.body.to_s %>
-      Here is your reminder!!!!
     </p>
   </body>
 </html>
