clean up snooze links

--- a/app/views/user_mailer/send_reminder.html.haml
+++ b/app/views/user_mailer/send_reminder.html.haml
@@ -6,7 +6,7 @@
     %table{:style => "600px"}
       %tr
         %td{:colspan => "2"}
-          %strong Here is your reminder
+          %strong Sup yo! Here's your reminder
           %hr
       %tr
         %td{:style => "width:50%"}
