--- a/app/views/user_mailer/_snooze_box.html.haml
+++ b/app/views/user_mailer/_snooze_box.html.haml
@@ -6,26 +6,16 @@
           %b Snooze for:
       %tr
         %td{:style => "text-align:right;width:5%"} Minutes:
-        %td
-          - EmailHelper.snooze_options([15,30,45], 'minutes', 'mi').each do |format|
-            = link_to format[1], snooze_reminder_url(@reminder, :duration => format[0], :token => @reminder.snooze_token)
+        = render 'snooze_link', :options => ['15','30','45'], :type => 'mi'
       %tr
         %td{:style => "text-align:right"} Hours:
-        %td
-          - EmailHelper.snooze_options([1,3,6,8,12], 'hours', 'h').each do |format|
-            = link_to format[1], snooze_reminder_url(@reminder, :duration => format[0], :token => @reminder.snooze_token)
+        = render 'snooze_link', :options => ['1','3','6','8','12'], :type => 'h'
       %tr
         %td{:style => "text-align:right"} Days:
-        %td
-          - EmailHelper.snooze_options([1,2,3,4,5,6], 'days', 'd').each do |format|
-            = link_to format[1], snooze_reminder_url(@reminder, :duration => format[0], :token => @reminder.snooze_token)
+        = render 'snooze_link', :options => ['1','2','3','4','5','6'], :type => 'd'
       %tr
         %td{:style => "text-align:right"} Weeks:
-        %td
-          - EmailHelper.snooze_options([1,2,3], 'weeks', 'w').each do |format|
-            = link_to format[1], snooze_reminder_url(@reminder, :duration => format[0], :token => @reminder.snooze_token)
+        = render 'snooze_link', :options => ['1','2','3'], :type => 'w'
       %tr
         %td{:style => "text-align:right"} Months:
-        %td
-          - EmailHelper.snooze_options([1,3,6,12], 'months', 'mo').each do |format|
-            = link_to format[1], snooze_reminder_url(@reminder, :duration => format[0], :token => @reminder.snooze_token)
+        = render 'snooze_link', :options => ['1','3','6','12'], :type => 'mo'
