--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -15,6 +15,9 @@
   <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
   <%= f.password_field :current_password %></div>
 
+  <div><%= f.label :timezone %><br />
+  <%= f.time_zone_select :timezone, ActiveSupport::TimeZone.us_zones, include_blank: true %></div>
+
   <div><%= f.submit "Update" %></div>
 <% end %>
 
