--- a/app/views/user_mailer/send_reminder.html.haml
+++ b/app/views/user_mailer/send_reminder.html.haml
@@ -14,6 +14,8 @@
           %p{:style => "font-size:16px"}#{@reminder.subject}
           %h2 Date Sent:
           %p{:style => "font-size:16px"}#{@reminder.created_at.strftime('%d-%b-%Y')}
+          %h2 Snooze Count:
+          %p{:style => "font-size:16px"}#{@reminder.snooze_count}
         %td{:style => "width:50%"}
           = render 'snooze_box'
       %tr
