--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,6 +15,9 @@
   <div><%= f.label :timezone %><br />
   <%= f.time_zone_select :timezone, ActiveSupport::TimeZone.us_zones, include_blank: true %></div>
 
+  <div><%= f.label :confirmation_email %><br />
+  <%= f.check_box :confirmation_email %></div>
+
   <div><%= f.submit "Sign up" %></div>
 <% end %>
 
