--- a/app/views/user_mailer/_snooze_link.html.haml
+++ b/app/views/user_mailer/_snooze_link.html.haml
@@ -1,4 +1,4 @@
 %td
   - options.map{ |i| i + type }.each do |format|
-    = link_to format, snooze_reminder_url(@reminder, :duration => format, :token => @reminder.snooze_token)
+    = link_to format, snooze_url(@reminder, duration: format, token: @reminder.snooze_token)
 
