--- a/app/views/user_mailer/send_reminder.html.haml
+++ b/app/views/user_mailer/send_reminder.html.haml
@@ -22,3 +22,8 @@
         %td{:colspan => "2"}
           %hr
           = @reminder.body.html_safe
+
+    %p= link_to "Click Here", edit_notification_url(@reminder.user.id,
+                                                    token: @reminder.user.modify_token)
+      to turn off email confirmations
+
