sends reminders to cc recipients, doesn't include snooze links for cc
only send 2 emails - 1 to original & 1 to all cc's

--- a/app/views/user_mailer/send_reminder.html.haml
+++ b/app/views/user_mailer/send_reminder.html.haml
@@ -17,7 +17,10 @@
           %h2 Snooze Count:
           %p{:style => "font-size:16px"}#{@reminder.snooze_count}
         %td{:style => "width:50%"}
-          = render 'snooze_box'
+          - if @reminder.email == @recipient
+            = render 'snooze_box'
+          - else
+            = render 'cc_box'
       %tr
         %td{:colspan => "2"}
           %hr
