--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,10 +13,10 @@
   <%= f.password_field :password_confirmation %></div>
 
   <div><%= f.label :timezone %><br />
-  <%= f.time_zone_select :timezone, ActiveSupport::TimeZone.us_zones, include_blank: true %></div>
+  <%= f.time_zone_select :timezone %></div>
 
-  <div><%= f.label :confirmation_email %><br />
-  <%= f.check_box :confirmation_email %></div>
+  <div><%= f.check_box :confirmation_email %>
+  <%= f.label "Receive confirmation emails?" %></div>
 
   <div><%= f.submit "Sign up" %></div>
 <% end %>
