--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,8 @@
             = " | "
             =link_to 'Login', new_user_session_path
           - else
-            = "#{current_user.email} | "
+            =link_to current_user.email, edit_user_registration_path
+            =" | "
             =link_to 'Logout', destroy_user_session_path, :method => :delete
 
     .container-fluid
