--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,9 @@
 !!!
 %html
   %head
-    %title RadMeet
+    %title Hound.cc - easy email reminders
+    :javascript
+      var CKEDITOR_BASEPATH = '/assets/ckeditor/';
     = stylesheet_link_tag    "application"
     = javascript_include_tag "application"
     = javascript_include_tag "ckeditor/ckeditor.js"
