move confirmation link to confirmation email

--- a/app/views/notifications/failed.html.haml
+++ b/app/views/notifications/failed.html.haml
@@ -1,2 +1,5 @@
-%h1 We have failed to update your preferences
-%h3 Thank you for using SORAD!
+%h1 Sorry, we have failed to update your preferences
+%h3
+  Click
+  = link_to 'here', new_user_session_path
+  to login and edit your profile
