add aliases; add validator to check email uniqueness across users and aliases; ajaxify alias add/remove on profile edit page; remove old precompiled assets

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,8 @@
   %body
     .topbar
       .container-fluid
-        %a.brand Hound.cc
+        .brand
+          = link_to 'Hound.cc', '/'
         %ul.nav
         %p.pull-right
           - unless user_signed_in?
