--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -15,7 +15,9 @@
   zoom: 1;
 }
 
-.brand {
+.brand a {
+  text-decoration: none;
+  color: black;
   float: left;
   display: block;
   padding: 8px 20px 12px;
