--- a/app/views/email_aliases/create.js.erb
+++ b/app/views/email_aliases/create.js.erb
@@ -1,5 +1,5 @@
 $('#email_aliases').html("<%=j render current_user.email_aliases %>")
-$('#email_alias_email').val ''
+$('#email_alias_email').val('')
 <% if @email_alias.errors.any? %>
 $('.status').show()
 $('.status').text('Email already in use')
