fix js not working on prod; user can view and edit cc's in single textbox

--- a/app/views/email_aliases/create.js.erb
+++ b/app/views/email_aliases/create.js.erb
@@ -1,7 +1,7 @@
-$('#email_aliases').html("<%=j render current_user.email_aliases %>")
-$('#email_alias_email').val('')
+$('#email_aliases').html("<%=j render current_user.email_aliases %>");
+$('#email_alias_email').val('');
 <% if @email_alias.errors.any? %>
-$('.status').show()
-$('.status').text('Email already in use')
-$('.status').fadeOut(4000)
+  $('.status').show();
+  $('.status').text('Email already in use');
+  $('.status').fadeOut(4000);
 <% end %>
