--- a/app/views/reminders/edit.html.haml
+++ b/app/views/reminders/edit.html.haml
@@ -5,11 +5,14 @@
   = f.label 'Subject:'
   = f.text_field :subject
   %p
+  = f.label 'Cc:'
+  = f.text_field :cc_string
+  %p
   = f.label 'Reminder Date/Time:'
   = f.datetime_select :reminder_time
   = f.label Time.zone
   %p
     = f.text_area :body, class:'ckedit'
   %br
-  = f.submit :submit
+  = f.submit :submit, class:'js_submit'
   = link_to 'cancel', root_path
