only send change notification if body or time changes; add diff to change message

--- a/app/views/reminders/edit.html.haml
+++ b/app/views/reminders/edit.html.haml
@@ -14,5 +14,5 @@
   %p
     = f.text_area :body, class:'ckedit'
   %br
-  = f.submit :submit, class:'js_submit'
+  = f.submit :submit, class:'js_submit', params: '123'
   = link_to 'cancel', root_path
