--- a/app/views/user_mailer/_cc_box.html.haml
+++ b/app/views/user_mailer/_cc_box.html.haml
@@ -11,7 +11,7 @@
           = @reminder.created_at
       %tr
         %td{:colspan => "2", :style => "text-align:left"}
-          You are receiving this email because you were listed as a recipient on the original email that was sent to memento.cc.
+          You are receiving this email because you were listed as a recipient on the original email that was sent to hound.cc.
       %tr
         %td{:colspan => "2", :style => "text-align:left"}
-          Visit www.memento.cc to learn more about this service
+          Visit www.hound.cc to learn more about this service
