--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -9,16 +9,11 @@
   <div><%= f.label :password %><br />
   <%= f.password_field :password %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
   <div><%= f.label :timezone %><br />
-  <%= f.time_zone_select :timezone %></div>
-
-  <div><%= f.check_box :confirmation_email %>
-  <%= f.label "Receive confirmation emails?" %></div>
+    <%= f.time_zone_select :timezone, ActiveSupport::TimeZone.us_zones, :default => "Pacific Time (US & Canada)" %></div><br />
 
   <div><%= f.submit "Sign up" %></div>
+  <br />
 <% end %>
 
 <%= render :partial => "devise/shared/links" %>
