refactor reminder scopes

--- a/app/views/reminders/index.html.haml
+++ b/app/views/reminders/index.html.haml
@@ -9,7 +9,7 @@
   .reminder_list
     %table{class: 'modern'}
       %tr
-        =render 'title'
+        %th.large= "You have #{pluralize(@reminders.count, "#{@current_filter} reminder")}"
         %th.large Reminder Date
         %th.small Mark as complete?
 
