--- a/app/views/user_mailer/_confirmation.html.haml
+++ b/app/views/user_mailer/_confirmation.html.haml
@@ -1,5 +1,5 @@
 %h1 We've set your reminder!
 You'll get it on:
-%strong=@reminder.formatted_reminder_time
+%strong=@reminder.reminder_time.to_formatted_s(:short_with_day)
 %p= link_to "Edit/Delete this reminder", edit_reminder_url(@reminder)
 %p= link_to "Turn off confirmation emails", edit_notification_url(@reminder.user.id, token: @reminder.user.modify_token)
