--- a/app/views/user_mailer/send_notification_snooze.html.haml
+++ b/app/views/user_mailer/send_notification_snooze.html.haml
@@ -9,4 +9,4 @@
           %strong Sup yo! You are fortunate enough to have your reminder
           = (@reminder.subject)
           snoozed until:
-          = @reminder.reminder_time
+          = @reminder.send_at
