refactor reminder_filter filter into presenter, use a concern for reminder scopes, remove sqlite hack

--- a/app/views/reminders/_grouped_reminders.html.haml
+++ b/app/views/reminders/_grouped_reminders.html.haml
@@ -1,4 +1,4 @@
-- @groups.each_pair do |key, values|
+- @presenter.groups.each_pair do |key, values|
   - if values.count > 0
     = key.to_s.titleize
     %table{class: 'modern'}
