fast specs; setup rake test; refactor reminder_mail into service & presenter

--- a/app/views/reminders/_reminders.html.haml
+++ b/app/views/reminders/_reminders.html.haml
@@ -1,8 +1,3 @@
 %table{class: 'modern'}
-  - @reminder_filter.reminders.each do |reminder|
-    %tr.reminder{id: "reminder#{reminder.id}_row"}
-      %td.large
-        = link_to reminder.subject, edit_reminder_path(reminder), remote: true, class: 'subject_link'
-      %td.large= reminder.send_at.to_formatted_s(:short_with_day)
-      = form_for reminder, url: reminder_path(reminder), remote: true do |f|
-        %td.small= f.check_box :delivered?, class: 'mark_as_complete', disabled: allow_changes(reminder)
+  - reminders.each do |reminder|
+    = render 'reminder', reminder: reminder
