--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,28 +1,27 @@
-!!!
-%html
-  %head
-    %title Hound.cc - easy email reminders
-    = stylesheet_link_tag    "application"
-    = javascript_include_tag "application"
-    = csrf_meta_tags
-  %body
-    .topbar
-      .container-fluid
-        .brand
-          = link_to 'Hound.cc', '/'
-        %ul.nav
-        %p.pull-right
-          - unless user_signed_in?
-            =link_to 'Sign up', new_user_registration_path
-            = " | "
-            =link_to 'Login', new_user_session_path
-          - else
-            =link_to current_user.email, edit_user_registration_path
-            =" | "
-            =link_to 'Logout', destroy_user_session_path, :method => :delete
+!!! 5
+%head
+  = render 'layouts/head'
 
+%body
+  = render "layouts/chromeframe"
+  .topbar
     .container-fluid
-      - flash.each do |name, msg|
-        = content_tag :div, msg, :id => "flash_#{name}", :class => 'flash'
-      = yield
+      .brand
+        = link_to 'Hound.cc', '/'
+      %ul.nav
+      %p.pull-right
+        - unless user_signed_in?
+          =link_to 'Sign up', new_user_registration_path
+          = " | "
+          =link_to 'Login', new_user_session_path
+        - else
+          =link_to current_user.email, edit_user_registration_path
+          =" | "
+          =link_to 'Logout', destroy_user_session_path, :method => :delete
 
+  .container-fluid
+    - flash.each do |name, msg|
+      = content_tag :div, msg, :id => "flash_#{name}", :class => 'flash'
+    = yield
+
+  = javascript_include_tag "application"
